--- a/src/styles.css
+++ b/src/styles.css
@@ -158,4 +158,65 @@
     top: 35%;
     width: 32%;
   }
+
+  .menu,
+  .sub-menu {
+   background-color:#9b9393;
+   color: white;
+   display: grid;
+  }
+
+  .bm-item:hover{
+    background-color: #bdc3c7;
+    color: #0e0e18;
+  }
+  .bm-item-selected {
+    background-color: #8aaccb  !important;
+}
   
+.tablearea {
+  width: 75%;
+  float: right;
+  border: none;
+}
+
+.td.p-editable-column{
+  padding: 15px;
+}
+
+.datatable-editing-demo .editable-cells-table td.p-cell-editing {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+tr.p-row-odd {
+  margin-bottom: 2px solid grey;
+  background-color: darkgray;
+  left: 2%;
+}
+
+table {
+    width: 80%;
+    border-collapse: collapse;
+}
+
+.columnheader {
+  padding: 15px;
+    width: 25%;
+    text-align: center;
+}
+
+.p-column-header-content {
+  padding: 15px;
+  text-align: center;
+}
+
+td.p-editable-column {
+  padding: 15px;
+  text-align: center;
+  border-right: 2px solid grey;
+}
+
+tr {
+  border: 2px solid grey;
+}
