--- a/src/styles.css
+++ b/src/styles.css
@@ -224,3 +224,9 @@ tr {
 .position {
   padding: 21px 30px;
 }
+.form-check-input {
+  position: absolute;
+  margin-top: -0.7rem;
+  margin-left: -0.25rem;
+}
+
